# austronesian-replication

./: .gitignore  README.md  pyproject.toml
preregistration/: paper-2-5th-family-preregistration.md  paper-2-6th-family-preregistration.md
results/: xfam_5th_uralic_migration_gradient.json  xfam_6th_turkic_migration_gradient.json  xfam_an_expanded_concepts.json  xfam_an_migration_gradient.json  xfam_bantu_cultural.json  xfam_bantu_migration_gradient.json  xfam_data_inventory.json  xfam_ie_cultural.json  xfam_ie_homeland_sensitivity.json  xfam_ie_migration_gradient.json  xfam_meta_comparison.csv  xfam_meta_summary.json  xfam_meta_v2.json  xfam_meta_v2_long.csv  xfam_meta_v3.json  xfam_meta_v3_long.csv  xfam_meta_v4.json  xfam_meta_v4_long.csv  xfam_robustness.json  xfam_robustness_table.csv  xfam_selectivity_v2.json  xfam_st_migration_gradient.json  xfam_st_pooled_forms.csv  xfam_st_pooled_mountain.json  xfam_st_stedt_expanded.json  xfam_st_stedt_full.json  xfam_st_stedt_rice_poc.json
scripts/: draw_stedt_pipeline.py  generate_decision_figure.py  generate_new_figures.py  visualization.py  xfam_5th_uralic_migration_gradient.py  xfam_6th_turkic_migration_gradient.py  xfam_an_expanded_concepts.py  xfam_an_migration_gradient.py  xfam_bantu_cultural_concepts.py  xfam_bantu_migration_gradient.py  xfam_check_data_availability.py  xfam_ie_cultural_concepts.py  xfam_ie_homeland_sensitivity.py  xfam_ie_migration_gradient.py  xfam_meta_analysis.py  xfam_meta_analysis_v2.py  xfam_meta_analysis_v3.py  xfam_meta_analysis_v4.py  xfam_robustness_alt_tests.py  xfam_st_pooled_mountain.py  (+4 more)
(+15 files in other folders)
