[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "austronesian"
version = "0.1.0"
description = "Research toolkit for Austronesian language root, phonology, and cognate studies"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "responses>=0.24",
]

[project.scripts]
austronesian = "austronesian.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
